# SDIA

sdia-controller/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  configure.ac.in  ofp_match_fix.patch
sdia-controller/autom4te.cache/: output.0  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.4
sdia-controller/src/: .gitignore  Makefile.in
sdia-controller/src/coreapps/: Makefile.in
sdia-controller/src/coreapps/graph/: Makefile.am  Makefile.in  commands.hh  end-host.cc  events.cc  graph.cc  graph.hh  helper.cc  interface.proto  interfaces.cc  lldp.cc  misc.hh
sdia-controller/src/coreapps/graph.bck/: Makefile.am  Makefile.in  (+11 more)
sdia-controller/src/coreapps/graph/openflow/: openflow.h
sdia-controller/src/coreapps/graph/protobuf/: interface.pb.cc  interface.pb.h
sdia-controller/src/etc/: Makefile.in
sdia-controller/src/include/: Makefile.in
sdia-controller/src/lib/: Makefile.in  connection.cc
sdia-controller/src/netapps/: Makefile.in
sdia-controller/src/utilities/: Makefile.in
sdia-deploy/: deploy-py  graph.gv  graph.gv.big
sdia-end-host/: .cproject  .project  .swp  omega.c  omega.h
sdia-end-host/icn/: icn.py
sdia-end-host/middlebox/: middlebox.py
sdia-end-host/netfilter/: Makefile
sdia-end-host/netfilter/omega/: omega.c  omega.h  path.sh
sdia-end-host/netfilter/pathlets/: Makefile  pathlet.c
sdia-end-host/pathlet/: pathlet.py
sdia-generate/: parse.py
sdia-ism/: as0.conf  as1.conf  as2.conf  bgp.py  icn.py  interface.proto  interface_pb2.py  middlebox.py  openflow.py  pathlet.py  run.py
(+9 files in other folders)
